<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_toggle_speech"
        android:icon="@drawable/ic_voice"
        android:title="@string/speech_toggle_content_start"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_stop_speech"
        android:icon="@drawable/ic_stop"
        android:title="@string/speech_stop_content"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_language_pair"
        android:actionLayout="@layout/menu_action_language_pair"
        android:icon="@drawable/ic_language_menu"
        android:title="@string/language_pair_button_unset"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_select_work"
        android:icon="@drawable/ic_menu_work"
        android:title="@string/work_menu_title"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_language_stats"
        android:icon="@drawable/ic_stats_language"
        android:title="@string/stats_button_language"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_work_stats"
        android:icon="@drawable/ic_stats_work"
        android:title="@string/stats_button_work"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_install_talgat"
        android:title="@string/speech_install_talgat"
        android:showAsAction="never" />
</menu>
